GL/Projet_GL/src/test/deca/syntax/invalid/sansObjet/invalid_call_function.deca
// Test : syntax_invalid_incomplete_function_call
// But : interdire l’utilisation d’un identifiant de fonction sans appel.
// Type d'erreur : erreur syntaxique
// Résultat attendu : erreur de syntaxe.

{
    println
}